--- a/.github/workflows/azure-sedaro-nano-deploy.yml
+++ b/.github/workflows/azure-sedaro-nano-deploy.yml
@@ -47,15 +47,20 @@ jobs:
         username=$(echo "${AZURE_CREDENTIALS}" | jq -r '.clientId')
         password=$(echo "${AZURE_CREDENTIALS}" | jq -r '.clientSecret')
         tenant=$(echo "${AZURE_CREDENTIALS}" | jq -r '.tenantId')
+        subscriptionId=$(echo "${AZURE_CREDENTIALS}" | jq -r '.subscriptionId')
 
         # Get the access token and grant access to client credentials on the ACR
         token=$(curl -X POST -d "grant_type=client_credentials&client_id=${username}&client_secret=${password}&resource=https://management.azure.com/" https://login.microsoftonline.com/${tenant}/oauth2/token | jq -r .access_token)
+        if [[ -z "${token}" ]]; then
+          echo "Failed to get access token"
+          exit 1
+        fi
 
         # Get the credetnials for the ACR
-        resource_group_name="rg-sedaro-nano-prod"   # magic numbers
-        registry_name="acrsedaronanoprod"           # magic numbers
-        rest_credential=$(curl --tlsv1.2 -X GET -H "Host: management.azure.com" -H "Authorization: Bearer ${token}" -H "content-Type: application/json" -H "Content-Length: 0" https://management.azure.com/subscriptions/d9cd4c0d-292c-42e8-9f30-347d1f845e1b/resourceGroups/${resource_group_name}/providers/Microsoft.containerRegistry/registries/${registry_name}/listCredentials?api-version=2023-01-01-preview)
-        if [[ $? -ne 0 || -z "${rest_credential}" ]]; then
+        resource_group_name='rg-sedaro-nano-prod'   # magic numbers
+        registry_name='acrsedaronanoprod'           # magic numbers
+        rest_credential=$(curl --tlsv1.2 -X GET -H "Host: management.azure.com" -H "Authorization: Bearer ${token}" -H "content-Type: application/json" -H "Content-Length: 0" https://management.azure.com/subscriptions/${subscriptionId}/resourceGroups/${resource_group_name}/providers/Microsoft.containerRegistry/registries/${registry_name}/listCredentials?api-version=2023-01-01-preview)
+        if [[ $? -ne 0 || -z ${rest_credential} ]]; then
           echo "Failed to get ACR credentials"
           exit 1
         fi
