--- a/.github/workflows/azure-sedaro-nano-deploy.yml
+++ b/.github/workflows/azure-sedaro-nano-deploy.yml
@@ -60,10 +60,10 @@ jobs:
         resource_group_name='rg-sedaro-nano-prod'   # magic numbers
         registry_name='acrsedaronanoprod'           # magic numbers
         rest_credential=$(curl --tlsv1.2 -X GET -H "Host: management.azure.com" -H "Authorization: Bearer ${token}" -H "content-Type: application/json" -H "Content-Length: 0" https://management.azure.com/subscriptions/${subscriptionId}/resourceGroups/${resource_group_name}/providers/Microsoft.containerRegistry/registries/${registry_name}/listCredentials?api-version=2023-01-01-preview)
-        if [[ $? -ne 0 || -z ${rest_credential} ]]; then
-          echo "Failed to get ACR credentials"
-          exit 1
-        fi
+        # if [[ $? -ne 0 || -z ${rest_credential} ]]; then
+        #   echo "Failed to get ACR credentials"
+        #   exit 1
+        # fi
 
         username=$(echo "${rest_credential}" | jq -r .username)
         password=$(echo "${rest_credential}" | jq -r .passwords[0].value)
