--- a/helmcharts/sedaro-nano/values.yaml
+++ b/helmcharts/sedaro-nano/values.yaml
@@ -3,8 +3,8 @@ Release:
   Namespace: sedaro-nano-prod
 
 Image:
-  Appservice: sedaro-nano-app-service
+  AppServiceName: sedaro-nano-app-service
   Appimage: acrsedaronanoprod.azurecr.io/sedaro-nano-app:latest
-  Webservice: sedaro-nano-web-service
+  WebServiceName: sedaro-nano-web-service
   Webimage: acrsedaronanoprod.azurecr.io/sedaro-nano-web:latest
 Replicas: 1
