Add ports to deployment

--- a/helmcharts/sedaro-nano/templates/deployment.yaml
+++ b/helmcharts/sedaro-nano/templates/deployment.yaml
@@ -18,5 +18,11 @@ spec:
       containers:
       - image: {{ .Values.Image.AppImage }}
         name: {{ .Values.Image.AppName }}
+        ports:
+          - containerPort: 8000
+            protocol: TCP
       - image: {{ .Values.Image.WebImage }}
         name: {{ .Values.Image.WebName }}
+        ports:
+          - containerPort: 3030
+            protocol: TCP
